--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -141,6 +141,14 @@ th {
   margin: 30px 0;
 }
 
+.paragraph-top {
+  margin-top: 30px;
+}
+
+.paragraph-bottom {
+  margin-bottom: 30px;
+}
+
 .footer {
   position: fixed;
 
